redis-master/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-master
  labels:
    app: redis-master
spec:
  serviceName: redis-master
  replicas: 3
  selector:
    matchLabels:
      app: redis-master
  template:
    metadata:
      labels:
        app: redis-master
      annotations:
    spec:
      volumes:
        - name: conf
          configMap: 
            name: redis-master-conf
      containers:
      - name: redis-master
        image: redis:6.2.5
        resources:
          requests:
            memory: "256m"
            cpu: "500m"
          limits:
            memory: "256m"
            cpu: "500m"
        imagePullPolicy: Always
        ports:
        - containerPort: 6379
          name: client
        command: ["redis-server"]
        args: 
          - "/conf/redis.conf"
        volumeMounts:
        - name: redis-data
          mountPath: /data
          readOnly: false
        - name: conf
          mountPath: /conf
  volumeClaimTemplates:
    - kind: PersistentVolumeClaim
      apiVersion: v1
      metadata:
        name: redis-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: "512m"
        storageClassName: local-storage
        volumeMode: Filesystem
